@@ -1,3 +1,8 @@
+Sat Mar 22 18:16:29 1997  Gary Houston  <ghouston@actrix.gen.nz>
+
+	* net_db.c (scm_gethost): don't check HAVE_GETHOSTENT, since 
+	configure doesn't know about it.
+
 Fri Mar 21 23:49:28 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
 
 	* snarf.h, backtrace.c: Name change SCM_GLOBAL --> SCM_VCELL.
